--- a/style.css
+++ b/style.css
@@ -87,6 +87,17 @@ a:hover {
     padding: 20px;
 }
     
+.section-item::before {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 2px;
+    width: 14px;
+    height: 14px; 
+    background-size: 14px 14px;
+    background-image: url("assets/svg/arrow.svg");
+  }
+
 .section-profile {
     display: flex;
     justify-content: space-around;
@@ -120,7 +131,7 @@ a:hover {
     
     
 .section-list {
-    list-style: square;
+    list-style: none;
 }
     
 .section-profile-logo {
@@ -135,6 +146,53 @@ a:hover {
 .project-process {
     color: #4c4c4c;
 }
+
+.section-item {
+    position: relative;
+    margin: 0;
+    margin-bottom: 10px;
+    padding: 0;
+    padding-left: 30px;
+  }
+
+.contacts-item:before {
+    content: "";
+    position: absolute;
+    top: 1px;
+    left: 0px;
+    width: 24px;
+    height: 24px; 
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
+.contacts-item:nth-child(1):before {
+    background-image: url("assets/svg/location.svg");
+  }
+  
+.contacts-item:nth-child(2):before {
+    top: 2px;
+    left: 0px;
+    width: 21px;
+    height: 21px;
+    background-image: url("assets/svg/email.svg");
+  }
+  
+.contacts-item:nth-child(3):before {
+    top: 4px;
+    left: 0px;
+    width: 19px;
+    height: 19px;
+    background-image: url("assets/svg/github2.svg");
+  }
+  
+.contacts-item:nth-child(4):before {
+    top: 2px;
+    left: 0px;
+    width: 22px;
+    height: 22px;
+    background-image: url("assets/svg/discord.svg");
+  }
     
 .section-profile-logo:hover {
     filter: none;
@@ -156,7 +214,7 @@ a:hover {
 .rsschool {
     width: 121px;
     height: 45px;
-    background-image: url(./assets/img/rss.svg);
+    background-image: url(./assets/svg/rss.svg);
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -164,7 +222,7 @@ a:hover {
 .github {
     width: 45px;
     height: 45px;
-    background-image: url(./assets/img/github.svg);
+    background-image: url(./assets/svg/github.svg);
     background-size: contain;
     background-repeat: no-repeat;
 }
